events image on text overlap is fixed

--- a/public/css/templatemo-scholar.css
+++ b/public/css/templatemo-scholar.css
@@ -1425,7 +1425,7 @@ Events Style
 }
 
 .events .item {
-    background-color: #f1f0fe;
+    background-color: #7a6ad859;
     border-radius: 25px;
     position: relative;
     padding: 40px;
